# bose-connect-app-linux

./: .gitmodules
src/: .gitignore  CMakeLists.txt  docker-compose.yml  main.c
src/.cache/clangd/index/: based.c.80CAA1CFE0F8E365.idx  based.h.67A2DC7ACE984DD1.idx  bluetooth.c.3DDA0B4B2A3F419F.idx  bluetooth.h.329F1EF814203531.idx  bose.c.2D523E1E5830D380.idx  bose.c.5C58AE30F4D3670F.idx  bose.h.2EF5204E4C91C901.idx  bose.h.645042F27B61317C.idx  main.c.60A16C7F677B2D13.idx  main.h.10AAB24FAD0F2165.idx  util.c.B7679CE88C2F623A.idx  util.h.58ED6BC4866B0FB5.idx
src/gtk/: bluetooth.c  bluetooth.h  connection_panel.c  gtk.c  gtk.h  info_panel.c  panels.c  panels.h
